[package]
name = "pltl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
fxhash = "0.2.1"
hoars = { git = "https://github.com/longfangsong/hoars.git", rev = "e7721fa" }
itertools = "0.14.0"
nom = "8.0.0"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
wasm-bindgen = "0.2.100"

[[bin]]
name = "pltl2dra"
path = "src/bin/pltl2dra.rs"

[profile.release]
debug = true
