[package]
name = "pltl"
version = "0.1.0"
edition = "2021"

[lib]
name = "pltl"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pltl2dra"
path = "src/bin/pltl2dra.rs"

[dependencies]
bimap = "0.6.3"
clap = { version = "4.5.31", features = ["derive"] }
dashmap = "6.1.0"
either = "1.15.0"
fxhash = "0.2.1"
itertools = "0.14.0"
nom = "8.0.0"
rand = { version = "0.9.0", optional = true }
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
smallvec = "1.14.0"
wasm-bindgen = "0.2.100"

[profile.release]
debug = true

[features]
default = ["generator"]
generator = ["dep:rand"]

[dev-dependencies]
criterion = "0.5.1"
ntest = "0.9.3"

[[bench]]
name = "hashmap_vs_vec"
harness = false

[[bench]]
name = "hashset_vs_bitset"
harness = false
